fix: iframe formatted badly on mobile

--- a/client/src/app/pages/musicpage/musicpage.component.css
+++ b/client/src/app/pages/musicpage/musicpage.component.css
@@ -1,5 +1,11 @@
 
 .music-player {
-    transform: scale(2) translate(960px, 25px);
-    height: 100px;    
+    height: 100%; 
+    width: 100%;
+}
+
+.iframe-container {
+    width: 770px;
+    height: 100px;
+    transform: scale(2) translate(-120px);
 }
